--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
         margin: 40px 0;
     }
     </style>
+    <meta name="google-site-verification" content="zvqCAsYLdhNEdwz4y94FO8tayK8Zo0d584xym6Aqmp8" />
 </head>
 <body>
 <header>
